Try to fix tom select z-index

--- a/assets/css/components/_form.scss
+++ b/assets/css/components/_form.scss
@@ -419,6 +419,10 @@ form {
 			right: rem($p-input);
 			color: inherit;
 		}
+
+		&:has(.ts-wrapper):has(> .l-grid) {
+			z-index: 10;
+		}
 	}
 }
 
